# sieve-rs

./: Cargo.toml  LICENSE  README.md
src/: error.rs  execution.rs  lib.rs  parser.rs  script.rs  types.rs
testdata/: rfc5228-3.1-if.sieve  rfc5228-full.sieve
